@@ -1,3 +1,8 @@
+2007-05-30 14:55 Mike Park  <mike.park@nasa.gov>
+
+	* src/gridcad.c (gridSmoothNodeARFaceSimplex) use simplex method to
+	find the best surface location to improve volume AR.
+
 2007-05-29 14:40 Mike Park  <mike.park@nasa.gov>
 
 	* src/gridmetric.c (gridCellMetricConformity) metric conformity.
